# advent-of-code-2022

./: .clang-format  .gitignore  CMakeLists.txt  README.md  run
cmake/: AddTask.cmake  AddTestModule.cmake
day1/include/: Task.hpp
day1/src/: Part1.cpp  Part2.cpp
day10/include/: Task.hpp
day10/src/: Part1.cpp  Part2.cpp
day11/: CMakeLists.txt
day11/include/: Task.hpp
day11/src/: Part1.cpp  Part2.cpp
day12/include/: Task.hpp
day12/src/: Part1.cpp  Part2.cpp
day13/include/: Task.hpp
day13/src/: Part1.cpp  Part2.cpp
day14/include/: Task.hpp
day14/src/: Part1.cpp  Part2.cpp
day15/: CMakeLists.txt
day15/include/: Task.hpp
day15/src/: Part1.cpp  Part2.cpp
day15/ut/: AddRangeTest.cpp  CountElementsTest.cpp  GetRangeTest.cpp
day2/src/: Part1.cpp  Part2.cpp
day3/: CMakeLists.txt
day3/include/: Task.hpp
day3/src/: Part1.cpp  Part2.cpp
day3/ut/: GetCommonLetterTest.cpp
day4/: CMakeLists.txt
day4/include/: Task.hpp
day4/src/: Part1.cpp  Part2.cpp
day4/ut/: TaskTest.cpp
day5/: CMakeLists.txt
day5/include/: Task.hpp
day5/src/: Part1.cpp  Part2.cpp
day6/include/: Task.hpp
day6/src/: Part1.cpp  Part2.cpp
day7/include/: Task.hpp
day7/src/: Part1.cpp  Part2.cpp
day8/include/: Task.hpp
day8/src/: Part1.cpp  Part2.cpp
day9/include/: Task.hpp
day9/src/: Part1.cpp  Part2.cpp
template/include/: Task.hpp
template/src/: Part2.cpp
template/ut/: TaskTest.cpp
utility/: CMakeLists.txt
utility/include/utility/: Arguments.hpp  Dbg.hpp  Stream.hpp
